rework index and index entry + add tests