@@ -1,15 +1,18 @@
 package ru.otus.vcs.index;
 
 import ru.otus.utils.Contracts;
-import ru.otus.vcs.exception.DeserializationException;
-import ru.otus.vcs.naming.VCSPath;
+import ru.otus.vcs.path.VCSPath;
+import ru.otus.vcs.ref.Sha1;
 
+import javax.annotation.Nullable;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -18,7 +21,6 @@ import java.util.stream.Collectors;
 import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toSet;
 import static java.util.stream.Collectors.toUnmodifiableMap;
-import static ru.otus.vcs.utils.Utils.mapValuesToImmutableMap;
 import static ru.otus.vcs.utils.Utils.utf8;
 
 /**
@@ -26,11 +28,9 @@ import static ru.otus.vcs.utils.Utils.utf8;
  */
 public class Index {
 
-    private final List<IndexEntry> indexEntries;
-    private final Map<VCSPath, List<IndexEntry>> pathToIndexEntries;
+    private final LinkedHashMap<VCSPath, List<IndexEntry>> pathToIndexEntries;
 
-    private Index(final List<IndexEntry> indexEntries, Map<VCSPath, List<IndexEntry>> pathToIndexEntries) {
-        this.indexEntries = indexEntries;
+    private Index(LinkedHashMap<VCSPath, List<IndexEntry>> pathToIndexEntries) {
         this.pathToIndexEntries = pathToIndexEntries;
     }
 
@@ -39,44 +39,58 @@ public class Index {
 
         final var content = utf8(bytes);
         if (content.isBlank()) {
-            return new Index(Collections.emptyList(), Collections.emptyMap());
+            return new Index(new LinkedHashMap<>());
         }
         final var indexEntries = Arrays.stream(content.split("\n"))
                 .map(IndexEntry::fromLineContent)
                 .collect(Collectors.toUnmodifiableList());
-        return new Index(indexEntries, indexEntriesToMap(indexEntries));
+        return create(indexEntries);
     }
 
     public static Index create(final List<IndexEntry> indexEntries) {
-        return new Index(List.copyOf(indexEntries), indexEntriesToMap(indexEntries));
+        Contracts.requireNonNullArgument(indexEntries);
+
+        return new Index(indexEntriesToMap(indexEntries));
     }
 
-    public Index withNewIndexEntry(final VCSPath path, final String sha) {
+    public Index withNewIndexEntry(final VCSPath path, final Sha1 sha) {
         Contracts.requireNonNullArgument(path);
         Contracts.requireNonNullArgument(sha);
-        Contracts.requireThat(!hasMergeConflict());
 
         final var indexEntriesForPath = pathToIndexEntries.get(path);
-
-        if (indexEntriesForPath == null) {
-            final var newIndexEntry = new IndexEntry(Stage.normal, path, sha);
-            final var newIndexEntries = new ArrayList<>(indexEntries);
-            newIndexEntries.add(newIndexEntry);
-            return new Index(Collections.unmodifiableList(newIndexEntries), indexEntriesToMap(newIndexEntries));
-        } else if (indexEntriesForPath.get(0).getSha().equals(sha)) {
+        if (indexEntriesForPath != null
+                && indexEntriesForPath.size() == 1
+                && indexEntriesForPath.get(0).getSha().equals(sha)) {
             return this;
         } else {
-            final var oldIndexEntry = indexEntriesForPath.get(0);
-            final var newIndexEntry = new IndexEntry(Stage.normal, path, sha);
-            final var newIndexEntries = new ArrayList<>(indexEntries);
-            final var indexOfOldIndexEntry = newIndexEntries.indexOf(oldIndexEntry);
-            newIndexEntries.set(indexOfOldIndexEntry, newIndexEntry);
-            return new Index(Collections.unmodifiableList(newIndexEntries), indexEntriesToMap(newIndexEntries));
+            final var newMapping = new LinkedHashMap<>(pathToIndexEntries);
+            final var newIndexEntry = IndexEntry.newNormalEntry(path, sha);
+            newMapping.put(path, List.of(newIndexEntry));
+            return new Index(newMapping);
         }
     }
 
+    @Nullable
+    public Index withRemovedIndexEntry(final VCSPath path) {
+        Contracts.requireNonNullArgument(path);
+
+        final var indexEntriesForPath = pathToIndexEntries.get(path);
+        if (indexEntriesForPath == null) {
+            return null;
+        } else {
+            final var newMapping = new LinkedHashMap<>(pathToIndexEntries);
+            newMapping.remove(path);
+            return new Index(newMapping);
+        }
+    }
+
+    public boolean isEmpty() {
+        return pathToIndexEntries.isEmpty();
+    }
+
     public byte[] serialize() {
-        return indexEntries.stream()
+        return pathToIndexEntries.values().stream()
+                .flatMap(List::stream)
                 .map(IndexEntry::toLineContent)
                 .collect(joining("\n"))
                 .getBytes(StandardCharsets.UTF_8);
@@ -89,7 +103,7 @@ public class Index {
         return max.isPresent() && max.get() > 1;
     }
 
-    public Map<VCSPath, String> getPathToSha() {
+    public Map<VCSPath, Sha1> getPathToSha() {
         Contracts.requireThat(!hasMergeConflict());
 
         return pathToIndexEntries.entrySet()
@@ -103,7 +117,7 @@ public class Index {
     }
 
     public Map<VCSPath, List<IndexEntry>> getPathToIndexEntries() {
-        return pathToIndexEntries;
+        return Collections.unmodifiableMap(pathToIndexEntries);
     }
 
     public Set<VCSPath> getConflictPaths() {
@@ -113,56 +127,66 @@ public class Index {
                 .collect(toSet());
     }
 
-    private static Map<VCSPath, List<IndexEntry>> indexEntriesToMap(final List<IndexEntry> entries) {
-        final Map<VCSPath, Set<String>> pathToSha = new HashMap<>();
+    private static LinkedHashMap<VCSPath, List<IndexEntry>> indexEntriesToMap(final List<IndexEntry> entries) {
+        final Map<VCSPath, Set<Sha1>> pathToSha = new HashMap<>();
         final Map<VCSPath, Set<Stage>> pathToInteger = new HashMap<>();
-        final Map<VCSPath, List<IndexEntry>> result = new HashMap<>();
+        final LinkedHashMap<VCSPath, List<IndexEntry>> result = new LinkedHashMap<>();
         for (final IndexEntry entry : entries) {
             final var correspondingSha = pathToSha.computeIfAbsent(entry.getPath(), (unused) -> new HashSet<>());
             final var correspondingStages = pathToInteger.computeIfAbsent(entry.getPath(), (unused) -> new HashSet<>());
-            if (!correspondingSha.add(entry.getSha())) {
-                throw new DeserializationException(
-                        String.format(
-                                "Repetitive sha = %s for the same path = %s.",
-                                entry.getSha(),
-                                entry.getPath()
-                        )
-                );
-            }
-            if (!correspondingStages.add(entry.getStage())) {
-                throw new DeserializationException(
-                        String.format(
-                                "Repetitive stage = %s for the same path = %s.",
-                                entry.getStage(),
-                                entry.getPath()
-                        )
-                );
-            }
+            Contracts.requireThat(
+                    correspondingSha.add(entry.getSha()),
+                    String.format(
+                            "Repetitive sha = %s for the same path = %s.",
+                            entry.getSha(),
+                            entry.getPath()
+                    )
+            );
+            Contracts.requireThat(
+                    correspondingStages.add(entry.getStage()),
+                    String.format(
+                            "Repetitive stage = %s for the same path = %s.",
+                            entry.getStage(),
+                            entry.getPath()
+                    )
+            );
             result.computeIfAbsent(entry.getPath(), (unused) -> new ArrayList<>()).add(entry);
         }
         checkStages(result);
-        return mapValuesToImmutableMap(result, List::copyOf);
+        result.replaceAll((k, v) -> List.copyOf(v));
+        return result;
     }
 
     private static void checkStages(final Map<VCSPath, List<IndexEntry>> pathToIndexEntries) {
         for (final var pathAndEntries : pathToIndexEntries.entrySet()) {
             final VCSPath path = pathAndEntries.getKey();
             final List<IndexEntry> indexEntries = pathAndEntries.getValue();
-            Contracts.requireThat(indexEntries.size() >= 1 && indexEntries.size() <= 3);
-            final var stages = indexEntries.stream()
-                    .map(IndexEntry::getStage).
-                            collect(Collectors.toList());
-            if (stages.size() == 1) {
-                if (stages.get(0) != Stage.normal) {
-                    throw new DeserializationException("Bad index. There is a single entry for path " + path.toString()
-                            + " with stage code " + stages.get(0).getCode()
-                    );
-                }
-            } else if (stages.size() == 2 && (stages.contains(Stage.normal) || stages.contains(Stage.base))) {
-                throw new DeserializationException("Bad index. There are inconsistent stages = " + stages);
-            } else if (stages.contains(Stage.normal)) {
-                throw new DeserializationException("Bad index. There are inconsistent stages = " + stages);
-            }
+            Contracts.requireThat(
+                    areIndexEntriesConsistent(indexEntries),
+                    "Multiple index entries are not consistent for path '" + path
+                            + "'. Entries: " + indexEntries
+            );
+        }
+    }
+
+    private static boolean areIndexEntriesConsistent(final List<IndexEntry> indexEntries) {
+
+        if (indexEntries.size() == 1 && indexEntries.get(0).getStage() == Stage.normal) {
+            return true;
+        } else if (indexEntries.size() == 2) {
+            return EnumSet.of(Stage.receiver, Stage.giver).equals(
+                    EnumSet.of(indexEntries.get(0).getStage(), indexEntries.get(1).getStage())
+            );
+        } else if (indexEntries.size() == 3) {
+            return EnumSet.of(Stage.base, Stage.receiver, Stage.giver).equals(
+                    EnumSet.of(
+                            indexEntries.get(0).getStage(),
+                            indexEntries.get(1).getStage(),
+                            indexEntries.get(2).getStage()
+                    )
+            );
+        } else {
+            return false;
         }
     }
 
